docs: fix navigation on mobile

--- a/docs/src/main.css
+++ b/docs/src/main.css
@@ -101,7 +101,7 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
-  bottom: 0;
+  max-height: 100vh;
   overflow-y: auto;
 }
 
@@ -127,7 +127,7 @@ body {
   flex-direction: column;
   padding: 24px;
   padding-top: 8px;
-  gap: 8px;
+  gap: 16px;
   background-color: var(--zinc-800);
 }
 
@@ -455,6 +455,7 @@ code {
 .pusher > a {
   color: #d4d4d8;
   font-size: 15px;
+  font-weight: 400;
 }
 
 .pusher > a:hover {
